Fix: dark mode code

--- a/src/assets/scss/components/common/MainHeader.scss
+++ b/src/assets/scss/components/common/MainHeader.scss
@@ -3,6 +3,7 @@ body.dark{
         background: #323232;
     }
     .headerWrap{
+        background: #323232;
         h1{
             a{
                 color: #fff;
